prevent overflow when stacked

--- a/src/components/toast.module.css
+++ b/src/components/toast.module.css
@@ -40,6 +40,9 @@
       &[data-type="info"] {
         background-color: var(--color-info);
       }
+      &[data-overlap] {
+        overflow: hidden;
+      }
 
       &[data-state="closed"] {
         transition:
